Update HTML + Random logo + fade effect slide => fix error on slide bleeding + add social networks + add subscribe text input + Index + Product page + Pick a dose + About + Contact

--- a/html/css/flexslider.css
+++ b/html/css/flexslider.css
@@ -201,6 +201,7 @@ html[xmlns] .flexslider .slides {
   position: absolute;
   bottom: 6%;
   text-align: center;
+  z-index: 255;
 }
 .flex-control-nav li {
   margin: 0 6px;
