--- a/html/scss/layout/_footer.scss
+++ b/html/scss/layout/_footer.scss
@@ -32,6 +32,55 @@
   }
 }
 
+.icons{
+    text-align: right;
+
+    ul li{
+        list-style: none;
+        float: right;
+
+        .facebook {
+            overflow: hidden;
+            background: url("../images/facebook.png") left center no-repeat;
+            text-indent: 100px;
+            height: 34px;
+            width: 34px;
+            display: inline-block;
+        }
+
+        .instagram {
+            overflow: hidden;
+            background: url("../images/instagram.png") left center no-repeat;
+            text-indent: 100px;
+            height: 34px;
+            width: 34px;
+            display: inline-block;
+        }
+    }
+    
+}
+
+.subscribe{
+    padding-top:10px;
+    
+    input {
+        line-height: 20px;
+        text-align: center;
+        color: #97254a;
+        padding: 0 5px;
+        width: 200px;
+        border: 1px solid #7e7f7d;
+        margin: 0;
+        -moz-border-radius: 5px 0 0 5px;
+        border-radius: 5px 0 0 5px;
+        background-color: #fefbf0;
+        font-size: 9px;
+        letter-spacing: 1.6px;
+        text-transform: uppercase;
+    }
+}
+
+
 .copyright{
   p.copy{
     font-size: $fs_little;
